don't shortcut Above restacks

just because we're above the sibling.
There could be another sibling to get below.

BUG: 313909
REVIEW: 108609
FIXED-IN: 4.11